[package]
name = "lux"
version = "0.0.2"
authors = ["Ty Overby <ty@pre-alpha.com>"]
description = "A super simple 2d-graphics engine that handles windowing and events for you!  Right now it's supposed to be a top secret! Shhhhh..."
license = "MIT"

exclude = ["website/"]

[lib]
name = "lux"
path = "src/lib.rs"
crate-type = ["dylib", "bin", "rlib"]

[[bin]]
name = "test_runner"
path = "src/test_runner.rs"

[features]
default = [ ]
freetype = ["font-atlas-freetype"]

[dependencies.font-atlas-freetype]
optional = true
version = "0.1.0"

[dependencies.glium]
version = "0.8.4"
default-features = false
features = ["image", "glutin"]

[dependencies]
poison-pool = "0.1.0"
font-atlas = "0.1.0"
font-atlas-image = "0.1.0"
glutin = "0.3.4"
image = "0.3.11"
num = "0.1.25"
clock_ticks = "0.0.6"
vecmath = "0.1.1"
freetype-rs = "0.1.0"

[dev-dependencies]
noise = "0.1.5"

[profile.dev]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = false
