[package]
name = "font-atlas-freetype"
version = "0.1.0"
authors = ["Ty Overby <ty@pre-alpha.com>"]

license = "MIT"
description = "A freetype-based loader for font-atlas."

[[bin]]
name = "atlas_generator"
path = "./src/atlas_generator.rs"

[dependencies]
font-atlas = "0.1.0"
image = "*"
freetype-rs = "*"
font-atlas-image = "0.1.0"
glyph_packer = "0.0.0"
