[package]
name = "freetype-atlas"
version = "0.1.0"
authors = ["Ty Overby <ty@pre-alpha.com>"]

[[bin]]
name = "atlas_generator"
path = "./src/atlas_generator.rs"

[lib]
name = "freetype_atlas"
path = "./src/lib.rs"

[dependencies.fontcache]
path = "../"

[dependencies.glyph_packer]
git = "https://github.com/TyOverby/glyph_packer.git"

[dependencies.image]
[dependencies.freetype-rs]
[dependencies.image-atlas]
path = "../image-atlas"
